Bug 969203: Take out non strictly commutative Float32 functions; r=sstangl